manage-group-members/force-app/main/default/objects/Report_Scheduler__c/Report_Scheduler__c.object-meta.xml
<CustomObject>
    <label>Report Scheduler</label>
    <nameField>
        <label>Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reports Scheduler</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>