manage-group-members/force-app/main/default/objects/Report_Scheduler__c/fields/Recipient_1__c.field-meta.xml
<CustomField>
    <fullName>Recipient_1__c</fullName>
    <description>Recipient 1 Email</description>
    <label>Recipient 1</label>
    <required>true</required>
    <type>Email</type>
</CustomField>