manage-group-members/force-app/main/default/objects/Report_Scheduler__c/fields/Recipient_2__c.field-meta.xml
<CustomField>
    <fullName>Recipient_2__c</fullName>
    <label>Recipient 2</label>
    <type>Email</type>
</CustomField>