manage-group-members/force-app/main/default/objects/Report_Scheduler__c/fields/Recipient_3__c.field-meta.xml
<CustomField>
    <fullName>Recipient_3__c</fullName>
    <label>Recipient 3</label>
    <type>Email</type>
</CustomField>