manage-group-members/force-app/main/default/objects/Report_Scheduler__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <label>Report ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>