manage-group-members/force-app/main/default/objects/Report_Scheduler__c/fields/Schedule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Date_Time__c</fullName>
    <label>Schedule Date/Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>